<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.github.rdlopes</groupId>
    <artifactId>maven-root-pom</artifactId>
    <version>1.7.0</version>
  </parent>

  <artifactId>tfhe-java</artifactId>
  <version>0.7.0</version>
  <name>TFHE Java</name>
  <description>TFHE encryption scheme for Java</description>
  <url>https://github.com/rdlopes/tfhe-java</url>

  <scm>
    <connection>scm:git:https://github.com/rdlopes/${project.artifactId}.git</connection>
    <developerConnection>scm:git:https://github.com/rdlopes/${project.artifactId}.git</developerConnection>
    <tag>0.7.0</tag>
    <url>https://github.com/rdlopes/${project.artifactId}</url>
  </scm>

  <properties>
    <java.version>24</java.version>
    <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
    <tfhe-rs.basedir>${project.build.directory}/tfhe-rs</tfhe-rs.basedir>
    <tfhe-rs.build.directory>${tfhe-rs.basedir}/target/release</tfhe-rs.build.directory>
    <native-bindings.basedir>${project.build.directory}/generated-sources/tfhe-rs</native-bindings.basedir>
    <native-libs.basedir>${project.build.directory}/native</native-libs.basedir>
    <!--suppress XmlUnresolvedReference -->
    <native-libs.libraryPath>${native-libs.basedir}/${os.detected.name}/${os.detected.arch}</native-libs.libraryPath>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <environmentVariables>
              <RUST_BACKTRACE>full</RUST_BACKTRACE>
            </environmentVariables>
            <argLine>-Djava.library.path=${native-libs.libraryPath}
              --enable-native-access=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-native-bindings</id>
            <goals>
              <goal>add-source</goal>
            </goals>
            <phase>process-sources</phase>
            <configuration>
              <sources>
                <source>${native-bindings.basedir}</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>include-native-libraries</id>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <phase>prepare-package</phase>
            <configuration>
              <outputDirectory>${project.build.outputDirectory}/native</outputDirectory>
              <resources>
                <resource>
                  <directory>${native-libs.basedir}</directory>
                  <includes>
                    <include>**/*.h</include>
                    <include>**/*.dylib</include>
                    <include>**/*.so</include>
                    <include>**/*.dll</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>${os-maven-plugin.version}</version>
      </extension>
    </extensions>
  </build>

  <profiles>
    <profile>
      <id>local</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>clone-tfhe-rs</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>initialize</phase>
                <configuration>
                  <executable>git</executable>
                  <arguments>
                    <argument>clone</argument>
                    <argument>https://github.com/zama-ai/tfhe-rs.git</argument>
                    <argument>${tfhe-rs.basedir}</argument>
                  </arguments>
                </configuration>
              </execution>
              <execution>
                <id>generate-native-library</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>generate-sources</phase>
                <configuration>
                  <workingDirectory>${tfhe-rs.basedir}</workingDirectory>
                  <executable>make</executable>
                  <arguments>
                    <argument>build_c_api</argument>
                  </arguments>
                </configuration>
              </execution>
              <execution>
                <id>generate-bindings-includes</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>generate-sources</phase>
                <configuration>
                  <workingDirectory>${tfhe-rs.basedir}</workingDirectory>
                  <executable>jextract</executable>
                  <arguments>
                    <argument>target/release/tfhe.h</argument>
                    <argument>--dump-includes</argument>
                    <argument>jextract-includes.txt</argument>
                  </arguments>
                </configuration>
              </execution>
              <execution>
                <id>filter-bindings-includes</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>generate-sources</phase>
                <configuration>
                  <workingDirectory>${tfhe-rs.basedir}</workingDirectory>
                  <executable>grep</executable>
                  <arguments>
                    <argument>tfhe</argument>
                    <argument>jextract-includes.txt</argument>
                  </arguments>
                  <outputFile>${tfhe-rs.basedir}/jextract-includes-filtered.txt</outputFile>
                </configuration>
              </execution>
              <execution>
                <id>generate-bindings</id>
                <goals>
                  <goal>exec</goal>
                </goals>
                <phase>generate-sources</phase>
                <configuration>
                  <workingDirectory>${tfhe-rs.basedir}</workingDirectory>
                  <executable>jextract</executable>
                  <arguments>
                    <argument>@jextract-includes-filtered.txt</argument>
                    <argument>target/release/tfhe.h</argument>
                    <argument>--header-class-name</argument>
                    <argument>TfheNative</argument>
                    <argument>--target-package</argument>
                    <argument>ai.zama.tfhe</argument>
                    <argument>--output</argument>
                    <argument>${native-bindings.basedir}</argument>
                    <argument>--use-system-load-library</argument>
                    <argument>--include-dir</argument>
                    <argument>target/release</argument>
                    <argument>--include-dir</argument>
                    <argument>target/release/deps</argument>
                    <argument>--library</argument>
                    <argument>tfhe</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <executions>
              <execution>
                <id>prepare-native-libraries</id>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <phase>generate-resources</phase>
                <configuration>
                  <outputDirectory>${native-libs.libraryPath}</outputDirectory>
                  <resources>
                    <resource>
                      <directory>${tfhe-rs.build.directory}</directory>
                      <includes>
                        <include>*.h</include>
                        <include>*.dylib</include>
                        <include>*.so</include>
                        <include>*.dll</include>
                      </includes>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
